Fixing overflow and text boxes

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ a {
 	width: 100%;
 	height: 100%;
 	z-index: 100;
+	overflow: hidden;
 }
 #floor{
 	height: 128px;
@@ -217,7 +218,8 @@ a {
 #bubbleBox {
 	position: absolute;
 	bottom: 266px;
-	width: 500px;
+	width: 400px;
+	max-height: 5.7em;
 	left: 0;
 	padding:20px;
 	border-radius: 25px;
@@ -226,6 +228,7 @@ a {
 	border: medium DarkSlateGray solid;
 	background-color: white;
 	z-index: 110;
+	overflow: auto;
 }
 #LoadingBackground {
 	display: table;
@@ -245,8 +248,8 @@ a {
 	top: 0;
 	left: 0;
 	padding:10%;
-	width: 90%;
-	height: 90%;
+	width: 80%;
+	height: 80%;
 	background-color: #CFCFCF;/*CFCFCF*/
 	background: -webkit-radial-gradient(#CFCFCF 0%, rgba(30,30,30,.5) 90%); /* Safari 5.1 to 6.0 */
 	background: -o-radial-gradient(#CFCFCF 0%, rgba(30,30,30,.5) 90%); /* For Opera 11.6 to 12.0 */
@@ -280,6 +283,7 @@ select {
 	background: -moz-radial-gradient(#CFCFCF 0%, rgba(30,30,30,.5) 90%); /* For Firefox 3.6 to 15 */
 	background: radial-gradient(#CFCFCF 0%, rgba(30,30,30,.5) 90%); /* Standard syntax */
 	z-index: 0;
+	overflow: hidden;
 }
 #content {
 	text-align: center;
